syntax = "proto3";

option objc_class_prefix = "HLW";

package helloworld;

service Message {
  rpc SayHello (HelloRequest) returns (HelloReply) {}
}

message HelloRequest {
  string name = 1;
}

message HelloReply {
  string message = 1;
}
